--- a/swagger/Alert.yaml
+++ b/swagger/Alert.yaml
@@ -11730,6 +11730,10 @@ definitions:
                 description: "Average SSL Sessions with TLS version 1.2."
                 type: number
                 format: double
+            avg_ssl_ver_tls13:
+                description: "Average SSL Sessions with TLS version 1.3. Field introduced in 18.2.6."
+                type: number
+                format: double
             avg_tolerated_responses:
                 description: "Avg number of HTTP requests that completed within tolerated latency."
                 type: number
