AV-61335 Added support for Netscaler PatSets

--- a/python/avi/migrationtools/netscaler_converter/test/ns.conf
+++ b/python/avi/migrationtools/netscaler_converter/test/ns.conf
@@ -386,3 +386,38 @@ add appfw XMLContentType ".*/.*\\+xml" -isRegex REGEX
 add appfw XMLContentType ".*/xml-.*" -isRegex REGEX
 set ip6TunnelParam -srcIP ::
 set ptp -state ENABLE
+
+
+add server 11.22.43.134_srv 11.22.43.134
+add serviceGroup infomanager-stage_80_sg HTTP -maxClient 0 -maxReq 0 -cip ENABLED x-forwarded-for -usip NO -useproxyport YES -cltTimeout 180 -svrTimeout 360 -CKA NO -TCPB NO -CMP NO
+bind serviceGroup infomanager-stage_80_sg 11.22.43.134_srv 80
+add lb vserver infomanager-stage_lbvs HTTP 0.0.0.0 0 -persistenceType COOKIEINSERT -timeout 0 -lbMethod ROUNDROBIN -cltTimeout 180 -appflowLog DISABLED
+bind lb vserver infomanager-stage_lbvs infomanager-stage_80_sg
+add cs vserver infomanager-stage_80_csvs HTTP 30.45.61.189 80 -cltTimeout 360 -appflowLog DISABLED
+bind cs vserver infomanager-stage_80_csvs -policyName infomanager-stage_80_default_pol -targetLBVserver infomanager-stage_lbvs -priority 10
+add cs policy infomanager-stage_80_default_pol -rule "HTTP.REQ.URL.SET_TEXT_MODE(IGNORECASE).STARTSWITH_ANY(\"infomanager_stage_pol_pset\")"
+add policy patset infomanager_stage_pol_pset
+bind policy patset infomanager_stage_pol_pset "/paired/" -index 7
+bind policy patset infomanager_stage_pol_pset "/test/" -index 23
+bind policy patset infomanager_stage_pol_pset "/bench/" -index 16
+bind policy patset infomanager_stage_pol_pset "/alerts/" -index 3
+bind policy patset infomanager_stage_pol_pset "/converter/" -index 9
+bind policy patset infomanager_stage_pol_pset "/administration/" -index 2
+bind policy patset infomanager_stage_pol_pset "/error_messages/" -index 17
+bind policy patset infomanager_stage_pol_pset "/alerts_admin/" -index 4
+bind policy patset infomanager_stage_pol_pset "/door/" -index 12
+bind policy patset infomanager_stage_pol_pset "/sports/" -index 10
+bind policy patset infomanager_stage_pol_pset "/global/" -index 21
+bind policy patset infomanager_stage_pol_pset "/blue/" -index 24
+bind policy patset infomanager_stage_pol_pset "/movies/" -index 11
+bind policy patset infomanager_stage_pol_pset "/lock/" -index 14
+bind policy patset infomanager_stage_pol_pset "/news/" -index 8
+bind policy patset infomanager_stage_pol_pset "/side/" -index 15
+bind policy patset infomanager_stage_pol_pset "/admin/" -index 1
+bind policy patset infomanager_stage_pol_pset "/doorway/" -index 13
+bind policy patset infomanager_stage_pol_pset "/feedback/" -index 18
+bind policy patset infomanager_stage_pol_pset "/feeds/" -index 19
+bind policy patset infomanager_stage_pol_pset "/suggestauto/" -index 6
+bind policy patset infomanager_stage_pol_pset "/formhandler/" -index 20
+bind policy patset infomanager_stage_pol_pset "/hotnews/" -index 22
+bind policy patset infomanager_stage_pol_pset "/net_client/" -index 5
