AV-62069 Added test cases for HTTP policy reuse

--- a/python/avi/migrationtools/f5_converter/test/bigip_v10.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v10.conf
@@ -618,3 +618,58 @@ virtual ok200 {
       tcp {}
    }
 }
+monitor shared_http_policy_monitor {
+   defaults from tcp
+   interval 30
+   timeout 91
+   dest *:epmap
+}
+node 10.90.114.133 {}
+node 10.90.114.138 {}
+profile persist source_addr {
+   mode source addr
+   mirror disable
+   timeout 600
+   mask none
+   map proxies enable
+   across services disable
+   across virtuals disable
+   across pools disable
+   rule none
+}
+pool shared_http_policy_pool_1 {
+   lb method member least conn
+   slow ramp time 300
+   monitor all shared_http_policy_monitor
+   members {
+      10.90.114.133:any {
+         priority 1
+      }
+   }
+}
+pool shared_http_policy_pool_2 {
+   lb method member least conn
+   slow ramp time 300
+   monitor all shared_http_policy_monitor
+   members {
+      10.90.114.138:any {
+         priority 1
+      }
+   }
+}
+virtual vs_http_policy_share_1 {
+   snat automap
+   pool shared_http_policy_pool_1
+   rules _sys_https_redirect
+   destination 10.10.32.12:467
+   ip protocol tcp
+   persist source_addr
+}
+virtual vs_http_policy_share_2 {
+   snat automap
+   pool shared_http_policy_pool_1
+   rules _sys_https_redirect
+   destination 10.10.32.15:59
+   ip protocol tcp
+   persist source_addr
+}
