--- a/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v11.conf
@@ -177,6 +177,12 @@ ltm node /Common/10.90.114.130 {
 ltm node /Common/10.90.114.135 {
     address 10.90.114.135
 }
+ltm node /Common/pool10.90.114.129 {
+    address 10.90.114.129
+}
+ltm node /Common/pool10.90.114.131 {
+    address 10.90.114.131
+}
 ltm node /Common/10.90.115.10 {
     address 10.90.115.10
     connection-limit 50
@@ -765,6 +771,22 @@ ltm pool /Common/testpool {
     }
     monitor /Common/gateway_icmp 
 }
+ltm pool /Common/pool10.90.114.129 {
+    members {
+        /Common/10.90.114.129:22 {
+            address 10.90.114.125
+        }
+    }
+    monitor /Common/tcp
+}
+ltm pool /Common/pool10.90.114.131 {
+    members {
+        /Common/10.90.114.131:22 {
+            address 10.90.114.131
+        }
+    }
+    monitor /Common/tcp
+}
 ltm rule /Common/F5-iRule-001 {
     
 }
@@ -1315,6 +1337,36 @@ ltm virtual /Common/vs_target_vs {
         /Common/fake-200-ok
     }
     source 0.0.0.0/0
+    translate-address enabled
+    translate-port enabled
+}
+ltm virtual /Common/vs_http_policy_share_1 {
+    destination /Common/10.90.114.129:22
+    ip-protocol tcp
+    mask 255.255.255.255
+    pool /Common/pool10.90.114.129
+    profiles {
+        /Common/sharedHttpPolicy {}
+    }
+    source 0.0.0.0/0
+    source-address-translation {
+        type automap
+    }
+    translate-address enabled
+    translate-port enabled
+}
+ltm virtual /Common/vs_http_policy_share_2 {
+    destination /Common/10.90.114.131:22
+    ip-protocol tcp
+    mask 255.255.255.255
+    pool /Common/pool10.90.114.131
+    profiles {
+        /Common/sharedHttpPolicy {}
+    }
+    source 0.0.0.0/0
+    source-address-translation {
+        type automap
+    }
     translate-address enabled
     translate-port enabled
 }
@@ -2441,6 +2493,18 @@ ltm profile fastl4 /Common/testfastl4 {
     timeout-recovery fallback
 }
 ltm profile http /Common/hdrInsert {
+    app-service none
+    defaults-from /Common/http
+    enforcement {
+        unknown-method allow
+    }
+    header-insert "AUD_CLIENT_IP: [IP::remote_addr]"
+    insert-xforwarded-for enabled
+    proxy-type reverse
+    xff-alternative-names none
+}
+
+ltm profile http /Common/sharedHttpPolicy {
     app-service none
     defaults-from /Common/http
     enforcement {
