--- a/swagger/ServiceEngineGroup.yaml
+++ b/swagger/ServiceEngineGroup.yaml
@@ -784,7 +784,7 @@ definitions:
                 description: "User defined description for the object."
                 type: string
             disable_avi_securitygroups:
-                description: "By default, Avi creates and manages security groups along with custom sg provided by user. Set this to True to disallow Avi to create and manage new security groups. Avi will only make use of custom security groups provided by user. This option is only supported for AWS cloud type. Field introduced in 17.2.13,18.1.4,18.2.1."
+                description: "By default, Avi creates and manages security groups along with custom sg provided by user. Set this to True to disallow Avi to create and manage new security groups. Avi will only make use of custom security groups provided by user. This option is supported for AWS and OpenStack cloud types. Field introduced in 17.2.13,18.1.4,18.2.1."
                 type: boolean
             disable_csum_offloads:
                 description: "Stop using TCP/UDP and IP checksum offload features of NICs. Field introduced in 17.1.14, 17.2.5, 18.1.1."
@@ -953,6 +953,11 @@ definitions:
                 description: "Applicable to Azure platform only. Maximum number of public IPs per Azure LB. . Field introduced in 17.2.12, 18.1.2."
                 type: integer
                 default: 30
+                format: int32
+            max_queues_per_vnic:
+                description: "Maximum number of queues per vnic Setting to '0' utilises all queues that are distributed across dispatcher cores. Allowed values are 0,1,2,4,8,16. Field introduced in 18.2.7."
+                type: integer
+                default: 1
                 format: int32
             max_rules_per_lb:
                 description: "Applicable to Azure platform only. Maximum number of rules per Azure LB. . Field introduced in 17.2.12, 18.1.2."
