--- a/swagger/SystemConfiguration.yaml
+++ b/swagger/SystemConfiguration.yaml
@@ -247,6 +247,9 @@ definitions:
         required:
             -   index
         properties:
+            assign_policy:
+                description: "Assignment rule for the Object Access Policy. Enum options - ASSIGN_ALL, ASSIGN_FROM_SELECT_LIST, ASSIGN_MATCHING_GROUP_NAME, ASSIGN_MATCHING_ATTRIBUTE_VALUE, ASSIGN_MATCHING_GROUP_REGEX, ASSIGN_MATCHING_ATTRIBUTE_REGEX. Field introduced in 18.2.7."
+                type: string
             assign_role:
                 description: " Enum options - ASSIGN_ALL, ASSIGN_FROM_SELECT_LIST, ASSIGN_MATCHING_GROUP_NAME, ASSIGN_MATCHING_ATTRIBUTE_VALUE, ASSIGN_MATCHING_GROUP_REGEX, ASSIGN_MATCHING_ATTRIBUTE_REGEX."
                 type: string
@@ -266,6 +269,14 @@ definitions:
             is_superuser:
                 description: "Placeholder for description of property is_superuser of obj type AuthMappingRule field type str  type boolean"
                 type: boolean
+            object_access_policy_refs:
+                description: "Object Access Policies to assign to user on successful match. It is a reference to an object of type ObjectAccessPolicy. Field introduced in 18.2.7."
+                type: array
+                items:
+                    type: string
+            policy_attribute_name:
+                description: "Attribute name for Object Access Policy assignment. Field introduced in 18.2.7."
+                type: string
             role_attribute_name:
                 description: "role_attribute_name of AuthMappingRule."
                 type: string
