--- a/swagger/VrfContext.yaml
+++ b/swagger/VrfContext.yaml
@@ -578,6 +578,17 @@ definitions:
             ip_end:
                 description: "End of IP address range. Optional if ip_begin is the only IP address in specified IP range. Field introduced in 17.1.3."
                 $ref: '#/definitions/IpAddr'
+    KeyValue:
+        type: object
+        required:
+            -   key
+        properties:
+            key:
+                description: "Key."
+                type: string
+            value:
+                description: "Value."
+                type: string
     StaticRoute:
         type: object
         required:
@@ -629,6 +640,11 @@ definitions:
             internal_gateway_monitor:
                 description: "Configure ping based heartbeat check for all default gateways in service engines of vrf. Field introduced in 17.1.1."
                 $ref: '#/definitions/InternalGatewayMonitor'
+            labels:
+                description: "Key/value labels which can be used for Object Access Policy permission scoping. Field introduced in 18.2.7."
+                type: array
+                items:
+                    $ref: '#/definitions/KeyValue'
             name:
                 description: "Name of the object."
                 type: string
