Added changes to add HTTP application profile for shared http policy configs

--- a/python/avi/migrationtools/f5_converter/test/bigip_v10.conf
+++ b/python/avi/migrationtools/f5_converter/test/bigip_v10.conf
@@ -661,6 +661,9 @@ virtual vs_http_policy_share_1 {
    snat automap
    pool shared_http_policy_pool_1
    rules _sys_https_redirect
+   profiles {
+      http {}
+      }
    destination 10.10.32.12:467
    ip protocol tcp
    persist source_addr
@@ -669,6 +672,9 @@ virtual vs_http_policy_share_2 {
    snat automap
    pool shared_http_policy_pool_1
    rules _sys_https_redirect
+   profiles {
+      http {}
+      }
    destination 10.10.32.15:59
    ip protocol tcp
    persist source_addr
